BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_User_FAP__c.object
<CustomObject>
    <description>This is a junction object, associating Users with the FAP configurations defined</description>
    <fields>
        <fullName>FAP_Configuration_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>FAP Configuration Template</label>
        <referenceTo>HSvc_FAPConfigurationTemplate__c</referenceTo>
        <relationshipLabel>User - FAPs</relationshipLabel>
        <relationshipName>UserFAPs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserFAP</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User - FAP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UFAP-{000000}</displayFormat>
        <label>User FAP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User - FAPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>